# Adept-2

./: CMakeLists.txt
include/: CMakeLists.txt  adept_source.h.in  create_adept_source_header.cmake
include/adept/: base.h
test/: CMakeLists.txt  test_array_speed.cpp  test_derivatives.cpp
