function(add_adept_test TESTNAME)
    set(TEST_HEADERS
            algorithm.h
            algorithm_with_and_without_ad.h)
    set(TEST_ADDITIONAL "")
    foreach(arg IN LISTS ARGN)
        set(TEST_ADDITIONAL ${TEST_ADDITIONAL} ${arg})
    endforeach()
    add_executable(${TESTNAME} ${TESTNAME}.cpp ${TEST_HEADERS} ${TEST_ADDITIONAL})
    target_link_libraries(${TESTNAME}
            PRIVATE
            adept::adept)
    enable_testing()
    add_test(NAME ${TESTNAME} COMMAND ./${TESTNAME})
endfunction()

add_adept_test(test_adept algorithm.cpp)
# add_adept_test(test_adept_with_and_without_ad algorithm.cpp)
add_adept_test(test_array_derivatives)
add_adept_test(test_array_speed)
add_adept_test(test_arrays)
add_adept_test(test_checkpoint)
add_adept_test(test_constructors)
add_adept_test(test_derivatives)
add_adept_test(test_fixed_arrays)
#add_adept_test(test_gsl_interface)
add_adept_test(test_misc algorithm.cpp)
#add_adept_test(test_no_lib algorithm.cpp)
add_adept_test(test_radiances simulate_radiances.cpp)
add_adept_test(test_radiances_array simulate_radiances.cpp)
add_adept_test(test_thread_safe)
add_adept_test(test_thread_safe_arrays)
add_adept_test(test_packet_operations)
add_adept_test(test_fastexp)
add_adept_test(test_reduce_active)
add_adept_test(test_minimizer)
